--- a/.github/workflows/Prerelease.yaml
+++ b/.github/workflows/Prerelease.yaml
@@ -1,170 +1,105 @@
-name: Prerelease (Tag & Publish)
+name: Publish NuGet Prerelease
 
 on:
-  push:
+  pull_request:
+    types:
+      - closed
     branches:
-      - main
+      - main # trigger on PR merge to main branch
+
   workflow_dispatch:
     inputs:
+      semver-build-prefix:
+        description: "Prerelease prefix (e.g. preview, alpha, beta, rc1, etc.)"
+        type: choice
+        options:
+          - preview
+          - alpha
+          - beta
+          - rc1
+          - rc2
+          - rc3
+        default: preview
+
       reason:
-        description: "Why run?"
-
-      os:
-        description: "JSON array of runners"
+        description: "Reason for manual pre-release"
+        required: true
         type: string
-        default: '["ubuntu-latest"]'
-        required: true
-
-      dotnet-version:
-        description: "Version of .NET SDK to use"
-        default: "9.0.x"
-        required: true
 
       force-publish:
         description: "Force publish even if already tagged"
         type: boolean
         default: false
-        required: true
-
-      save_package_artifact:
-        description: "Upload package as a workflow artifact"
-        type: boolean
-        default: false
-        required: true
 
 env:
-  DOTNET_NOLOGO: true
-  DOTNET_CLI_TELEMETRY_OPTOUT: true
-  DOTNET_VERSION: ${{ inputs.dotnet-version || vars.DOTNET_VERSION || '9.0.x' }}
-  FORCE_PUBLISH: ${{ inputs.force-publish || 'false' }}
-  REASON: ${{ inputs.reason || (inputs.force-publish && 'forced publish') || 'manual run' }}
-  SAVE_PACKAGE_ARTIFACT: ${{  inputs.save_package_artifact || 'false' }}
-  MINVER_TAG_PREFIX: "v"
-
-permissions:
-  contents: write
+  # *CP* The projects to build and package as a JSON array of strings - path(s) to the project(s).
+  # An empty string means to build and package the root solution's projects or the root project, marked with <IsPackable>true</IsPackable>.
+  # Hint: to set the value as a valid JSON list of strings, use YAML folded style (>-), and double quotes around the strings, e.g.:
+  # BUILD_PROJECTS: >-
+  #   ["src/Project1/Project1.csproj", "src/Project2/Project2.csproj"]
+  PACKAGE_PROJECTS: ""
+  # CP. 'github' - GitHub Packages; 'nuget' - NuGet.org. Make sure the NUGET_API_KEY secret corresponds to the server selected here.
+  NUGET_SERVER: github
 
 jobs:
-  prerelease:
+  get-params:
+    name: Prepare the parameters
     runs-on: ubuntu-latest
-    timeout-minutes: 30
+    if: github.event.pull_request.merged == true || github.event_name == 'workflow_dispatch'
+    outputs:
+      package-projects: ${{ steps.init-params.outputs.package-projects }}
+      nuget-server: ${{ steps.init-params.outputs.nuget-server }}
+      semver-build-prefix: ${{ steps.init-params.outputs.semver-build-prefix }}
+      force-publish: ${{ steps.init-params.outputs.force-publish }}
     steps:
-      - name: Checkout (full history)
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-
-      - name: Skip if commit already tagged (any v* tag)
-        id: tagcheck
-        run: |
-          if [[ $FORCE_PUBLISH != 'true' ]] && git tag --points-at HEAD | grep -E '^v[0-9]'; then
-            printf 'already_tagged=%s\n' "true" >> "$GITHUB_OUTPUT"
-          else
-            printf 'already_tagged=%s\n' "false" >> "$GITHUB_OUTPUT"
-          fi
-
-      - name: Stop (already tagged)
-        if: steps.tagcheck.outputs.already_tagged == 'true'
-        run: echo "Commit already has version tag – nothing to do."
-
-      - name: Compute prerelease tag
-        if: steps.tagcheck.outputs.already_tagged == 'false'
-        id: compute
+      - name: Gather parameters
+        id: init-params
         shell: bash
         run: |
-          set -euo pipefail
+          package_projects='${{ env.PACKAGE_PROJECTS }}'
+          nuget_server='${{ env.NUGET_SERVER }}'
+          semver_build_prefix=preview
+          force_publish=false
 
-          # Find latest stable (no hyphen) tag like v1.2.3
-          LATEST_STABLE=$(git tag --list 'v*' | grep -E '^v[0-9]+\.[0-9]+\.[0-9]+$' | sort -V | tail -n1 || true)
-          if [ -n "$LATEST_STABLE" ]; then
-            IFS='.' read -r MAJOR MINOR PATCH <<< "${LATEST_STABLE#v}"
-            NEXT_PATCH=$((PATCH+1))
-          else
-            # No stable tag yet
-            MAJOR=0
-            MINOR=1
-            NEXT_PATCH=0
+          if [ '${{ github.event_name }}' == "workflow_dispatch" ]; then
+            semver_build_prefix='${{ inputs.semver-build-prefix }}'
+            force_publish='${{ inputs.force-publish }}'
           fi
 
-          DATE=$(date -u +%Y%m%d)
-          RUN=${GITHUB_RUN_NUMBER}
-          PRERELEASE_TAG="v${MAJOR}.${MINOR}.${NEXT_PATCH}-preview.${DATE}.${RUN}"
-          printf 'prerelease_tag=%s\n' "$PRERELEASE_TAG" >> "$GITHUB_OUTPUT"
-          printf 'prerelease_tag=%s\n' "$PRERELEASE_TAG" >> "$GITHUB_STEP_SUMMARY"
-
-      - name: Log the reason for workflow dispatch
-        if: ${{ inputs.reason }}
-        run: |
+          # Set the outputs:
           {
-              echo "Prerelease reason:"
-              echo
-              echo "Forced by dispatch: $FORCE_PUBLISH"
-              echo "${{ inputs.reason }}"
-          } >> "$GITHUB_STEP_SUMMARY"
+            echo "package-projects=${package_projects}"
+            echo "nuget-server=${nuget_server}"
+            echo "semver-build-prefix=$semver_build_prefix"
+            echo "force-publish=${force_publish}"
+          }  >> $GITHUB_OUTPUT
 
-      - name: Create & push prerelease tag
-        if: steps.tagcheck.outputs.already_tagged == 'false'
-        env:
-          TAG: ${{ steps.compute.outputs.prerelease_tag }}
+  log-trigger:
+    if: github.event_name == 'workflow_dispatch'
+    runs-on: ubuntu-latest
+    steps:
+      - name: Log manual trigger reason
         run: |
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git tag -a "$TAG" -m "Automated prerelease $TAG" -m "Reason: $REASON" || echo "Tag exists, continuing"
-          git push origin "$TAG"
+          echo "::notice::Manual release triggered by ${{ github.actor }}"
+          echo "::notice::Reason: ${{ inputs.reason }}"
 
-      - name: Setup .NET
-        if: steps.tagcheck.outputs.already_tagged == 'false'
-        uses: actions/setup-dotnet@v4
-        with:
-          dotnet-version: ${{ env.DOTNET_VERSION }}
-          cache: true
-          cache-dependency-path: |
-            **/packages.lock.json
-            **/*.csproj
-
-      - name: Pack (MinVer consumes the just-pushed prerelease tag)
-        if: steps.tagcheck.outputs.already_tagged == 'false'
-        run: |
-          mkdir -p artifacts/pack
-          dotnet pack \
-            --configuration Release \
-            --output artifacts/pack \
-            /p:MinVerTagPrefix=${MINVER_TAG_PREFIX} \
-            "/p:PackageReleaseNotes=Prerelease: ${REASON:-N/A}"
-          ls -1 artifacts/pack
-
-      - name: Publish prerelease to NuGet
-        if: steps.tagcheck.outputs.already_tagged == 'false'
-        env:
-          NUGET_API_KEY: ${{ secrets.NUGET_API_KEY }}
-        run: |
-          if [ -z "${NUGET_API_KEY}" ]; then
-            echo "NUGET_API_KEY not configured"; exit 1
-          fi
-          dotnet nuget push artifacts/pack/*.nupkg \
-            --api-key "$NUGET_API_KEY" \
-            --source https://api.nuget.org/v3/index.json \
-            --skip-duplicate
-          printf 'Packages %s pushed to NuGet: %s\n' "$PRERELEASE_TAG" "$(ls)" >> "$GITHUB_STEP_SUMMARY"
-
-      - name: Upload package artifact
-        if: success() && steps.tagcheck.outputs.already_tagged == 'false' && env.SAVE_PACKAGE_ARTIFACT == 'true'
-        uses: actions/upload-artifact@v4
-        with:
-          name: nuget-packages-${{ steps.compute.outputs.prerelease_tag }}
-          path: artifacts/pack/*.nupkg
-          if-no-files-found: error
-          overwrite: true
-
-      - name: Summary
-        env:
-          REASON: ${{ inputs.reason }}
-        run: |
-          {
-              echo "## Release Summary"
-              echo
-              echo "- Tag: ${GITHUB_REF_NAME}"
-              echo "- Pre-release reason: ${REASON:-tag push}"
-              echo "- Artifacts:"
-              ls -1 artifacts/pack | sed 's/^/  - /'
-          } >> "$GITHUB_STEP_SUMMARY"
+  prerelease:
+    name: Prerelease
+    needs:
+      - get-params
+    uses: vmelamed/vm2.DevOps/.github/workflows/_prerelease.yaml@main
+    permissions:
+      contents: write
+      packages: write
+    secrets:
+      NUGET_API_KEY:
+        ${{ secrets.NUGET_API_NUGET_KEY }} # CP. The API key to use for publishing to the NuGet server (GitHub Package, NuGet.org, etc.).
+        # Make sure it corresponds to the 'env.NUGET_SERVER' above
+    with:
+      package-projects: ${{ needs.get-params.outputs.package-projects }}
+      dotnet-version: ${{ vars.DOTNET_VERSION }}
+      semver-build-prefix: ${{ needs.get-params.outputs.semver-build-prefix }}
+      force-publish: ${{ fromJSON(needs.get-params.outputs.force-publish) }}
+      reason: ${{ inputs.reason || '' }}
+      nuget-server: ${{ needs.get-params.outputs.nuget-server }}
+      save-package-artifacts: true
