--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -27,17 +27,11 @@ on:
 env:
   BUILD_PROJECTS: ""
   TEST_PROJECTS: >-
-    [
-    "tests/UlidType.Tests/UlidType.Tests.csproj",
-    ]
-
+    ["tests/UlidType.Tests/UlidType.Tests.csproj"]
   BENCHMARK_PROJECTS: >-
-    [
-    "benchmarks/UlidType.Benchmarks/UlidType.Benchmarks.csproj",
-    ]
+    ["benchmarks/UlidType.Benchmarks/UlidType.Benchmarks.csproj"]
   PREPROCESSOR_SYMBOLS: ""
   OS: ""
-
 
 jobs:
   get-params:
