--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -27,7 +27,7 @@ on:
 env:
   BUILD_PROJECTS: ""
   TEST_PROJECTS: >-
-    ["tests/UlidType.Tests/UlidType.Tests.csproj"]
+    ["test/UlidType.Tests/UlidType.Tests.csproj"]
   BENCHMARK_PROJECTS: >-
     ["benchmarks/UlidType.Benchmarks/UlidType.Benchmarks.csproj"]
   PREPROCESSOR_SYMBOLS: ""
