refactor: Update CI workflows for clarity and consistency

--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -36,7 +36,7 @@ env:
 
 jobs:
   get-params:
-    name: Prepare the default and passed in parameters
+    name: Finalize parameters from variables, inputs, secrets and defaults
     runs-on: ubuntu-latest # in this workflow the runner doesn't matter - we're just preparing the inputs for the next workload(s).
     if: ${{ github.event_name != 'push' || !contains(github.event.head_commit.message, '[skip ci]') }}
     env:
@@ -101,10 +101,13 @@ jobs:
           }  >> $GITHUB_OUTPUT
 
   call-ci:
-    uses: vmelamed/vm2.DevOps/.github/workflows/_ci.yaml@main
+    name: Build, Test, Benchmarks
     needs:
       - get-params
-    secrets: inherit
+    uses: vmelamed/vm2.DevOps/.github/workflows/_ci.yaml@main
+    secrets:
+      CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+      BENCHER_API_TOKEN: ${{ secrets.BENCHER_API_TOKEN }}
     permissions:
       contents: read # Required to checkout the code
       packages: read # Required to restore GitHub Packages NuGet packages
