--- a/.github/workflows/Release.yaml
+++ b/.github/workflows/Release.yaml
@@ -1,5 +1,4 @@
 name: Publish NuGet Release
-# After creating pay attention to the comments starting with CP - these are "Customize Points" to adjust the workflow to your repo needs.
 
 on:
   push:
@@ -19,14 +18,9 @@ on:
         default: false
 
 env:
-  # *CP* The projects to build and package as a JSON array of strings - path(s) to the project(s).
-  # An empty string means to build and package the root solution's projects or the root project, marked with <IsPackable>true</IsPackable>.
-  # Hint: to set the value as a valid JSON list of strings, use YAML folded style (>-), and double quotes around the strings, e.g.:
-  # BUILD_PROJECTS: >-
-  #   ["src/Project1/Project1.csproj", "src/Project2/Project2.csproj"]
-  PACKAGE_PROJECTS: ""
-  # CP. 'github' - GitHub Packages; 'nuget' - NuGet.org. Make sure the NUGET_API_KEY secret corresponds to the server selected here.
-  NUGET_SERVER: github
+  PACKAGE_PROJECTS: >-
+    ["src/vm2.Ulid/vm2.Ulid.csproj"]
+  NUGET_SERVER: nuget
 
 jobs:
   get-params:
@@ -63,6 +57,7 @@ jobs:
           }  >> $GITHUB_OUTPUT
 
   log-trigger:
+    name: Log manual trigger reason
     if: github.event_name == 'workflow_dispatch'
     runs-on: ubuntu-latest
     steps:
@@ -73,16 +68,18 @@ jobs:
 
   release:
     name: Release
-    uses: vmelamed/vm2.DevOps/.github/workflows/_release.yaml@main
     needs:
       - get-params
-    permissions:
-      contents: write
-      packages: write
+    uses: vmelamed/vm2.DevOps/.github/workflows/_release.yaml@main
     secrets:
-      # CP. the API key to use for publishing to GitHub NuGet packages or NuGet.org
-      # Make sure it corresponds to the 'nuget-server' below
-      NUGET_API_KEY: ${{ secrets.NUGET_API_NUGET_KEY }}
+      NUGET_API_GITHUB_KEY: ${{ secrets.NUGET_API_GITHUB_KEY }}
+      NUGET_API_NUGET_KEY: ${{ secrets.NUGET_API_NUGET_KEY }}
+      NUGET_API_KEY: ${{ secrets.NUGET_API_KEY }}
+    permissions:
+      contents: write # Required to checkout the code
+      packages: write # Required to publish GitHub Packages NuGet packages
+      pull-requests: write # Required to comment on PRs
+      checks: write # Required to create GitHub Checks
     with:
       package-projects: ${{ needs.get-params.outputs.package-projects }}
       dotnet-version: ${{ vars.DOTNET_VERSION }}
