--- a/.github/workflows/Prerelease.yaml
+++ b/.github/workflows/Prerelease.yaml
@@ -35,7 +35,7 @@ env:
   PACKAGE_PROJECTS: >-
     ["src/vm2.Ulid/vm2.Ulid.csproj"]
 
-  NUGET_SERVER: github
+  NUGET_SERVER: ${{ vars.NUGET_SERVER || 'github' }}
 
 jobs:
   get-params:
@@ -90,8 +90,8 @@ jobs:
       NUGET_API_NUGET_KEY: ${{ secrets.NUGET_API_NUGET_KEY }}
       NUGET_API_KEY: ${{ secrets.NUGET_API_KEY }}
     permissions:
-      contents: read # Required to checkout the code
-      packages: read # Required to restore GitHub Packages NuGet packages
+      contents: write # Required to checkout the code and create releases
+      packages: write # Required to restore and publish GitHub Packages NuGet packages
       pull-requests: write # Required to comment on PRs
       checks: write # Required to create GitHub Checks
     with:
