--- a/.github/workflows/Release.yaml
+++ b/.github/workflows/Release.yaml
@@ -12,14 +12,9 @@ on:
         required: true
         type: string
 
-      force-publish:
-        description: "Force publish"
-        type: boolean
-        default: false
-
 env:
   PACKAGE_PROJECTS: >-
-    ["src/vm2.Ulid/vm2.Ulid.csproj"]
+    ["src/Ulid/Ulid.csproj"]
   NUGET_SERVER: ${{ vars.NUGET_SERVER || 'github' }}
 
 jobs:
@@ -35,7 +30,6 @@ jobs:
     outputs:
       package-projects: ${{ steps.init-params.outputs.package-projects }}
       nuget-server: ${{ steps.init-params.outputs.nuget-server }}
-      force-publish: ${{ steps.init-params.outputs.force-publish }}
     steps:
       - name: Gather parameters
         id: init-params
@@ -43,17 +37,11 @@ jobs:
         run: |
           package_projects='${{ env.PACKAGE_PROJECTS }}'
           nuget_server='${{ env.NUGET_SERVER }}'
-          force_publish=false
-
-          if [ '${{ github.event_name }}' == "workflow_dispatch" ]; then
-            force_publish='${{ inputs.force-publish }}'
-          fi
 
           # Set the outputs:
           {
-            echo "package-projects=${package_projects}"
-            echo "nuget-server=${nuget_server}"
-            echo "force-publish=${force_publish}"
+              echo "package-projects=${package_projects}"
+              echo "nuget-server=${nuget_server}"
           }  >> $GITHUB_OUTPUT
 
   log-trigger:
@@ -67,7 +55,7 @@ jobs:
           echo "::notice::Reason: ${{ inputs.reason }}"
 
   release:
-    name: Release
+    name: Release - package and publish NuGet stable release
     needs:
       - get-params
     uses: vmelamed/vm2.DevOps/.github/workflows/_release.yaml@main
@@ -83,6 +71,5 @@ jobs:
     with:
       package-projects: ${{ needs.get-params.outputs.package-projects }}
       dotnet-version: ${{ vars.DOTNET_VERSION }}
-      force-publish: ${{ fromJSON(needs.get-params.outputs.force-publish) }}
       nuget-server: ${{ needs.get-params.outputs.nuget-server }}
       save-package-artifacts: true
