--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -1,5 +1,4 @@
 name: "CI: Build, Test, Benchmark"
-
 on:
   push:
     branches:
@@ -22,7 +21,7 @@ on:
         description: Define semicolon-separated preprocessor symbols to pass to the compiler
         type: string
         required: false
-        default: ''
+        default: ""
         # Here it enables benchmarks short run mode for faster execution, but less precise results, acceptable for CI runs.
 
 env:
@@ -35,7 +34,6 @@ env:
   PREPROCESSOR_SYMBOLS: ""
   OS: >-
     ["ubuntu-latest"]
-
 
 jobs:
   get-params:
@@ -74,7 +72,7 @@ jobs:
           if [ '${{ github.event_name }}' == "push" ]; then
               # Set the values for push events, and add SHORT_RUN to preprocessor_symbols for faster benchmark tests (less precise, yet acceptable for CI runs).
               os='${{ env.OS }}'
-              preprocessor_symbols='SHORT_RUN;${{ env.PREPROCESSOR_SYMBOLS }}' # *CP* Adjust as needed.
+              preprocessor_symbols='SHORT_RUN;${{ env.PREPROCESSOR_SYMBOLS }}' # *TODO* Adjust as needed.
           elif [ '${{ github.event_name }}' == "pull_request" ]; then
               # Set the values for pull_request events
               os='${{ env.OS }}'
